# downwloader-music-helper

./: .gitignore  package-lock.json
SpotiFLAC-Tauri/spotiflac-core-rs/: Cargo.toml  build_output.txt  errors.txt  errors_v2.txt  output_test_debug.txt  output_test_debug_utf8.txt
SpotiFLAC-Tauri/spotiflac-core-rs/examples/: test_download.rs
SpotiFLAC-Tauri/spotiflac-core-rs/isrc_cache.db/: db  snap.0000000000000209  snap.000000000000027D
SpotiFLAC-Tauri/spotiflac-core-rs/mirrors.db/: db  snap.000000000000AE39  snap.000000000000BD6B  snap.000000000000ECE9
SpotiFLAC-Tauri/spotiflac-core-rs/provider_priority.db/: db  snap.00000000000002F3  snap.00000000000009C3  snap.0000000000000C0B
SpotiFLAC-Tauri/spotiflac-core-rs/src/: engine.rs  lib.rs  progress.rs
SpotiFLAC-Tauri/spotiflac-core-rs/src/isrc/: cache.rs  mod.rs  spotify_id.rs  totp.rs
SpotiFLAC-Tauri/spotiflac-core-rs/src/metadata/: lyrics.rs  mod.rs  musicbrainz.rs  spotify.rs  tagger.rs
SpotiFLAC-Tauri/spotiflac-core-rs/src/models/: mod.rs
SpotiFLAC-Tauri/spotiflac-core-rs/src/providers/: amazon.rs  mod.rs  qobuz.rs  tidal.rs
SpotiFLAC-Tauri/spotiflac-core-rs/src/storage/: history.rs  mirror_health.rs  mod.rs  provider_priority.rs
SpotiFLAC-Tauri/spotiflac-core-rs/src/utils/: analysis.rs  assets.rs  audio_processor.rs  ffmpeg.rs  ffmpeg_downloader.rs  file_manager.rs  filename.rs  ip.rs  metadata_formatter.rs  mod.rs  resample.rs  scanner.rs  spotify.rs  status.rs  upc.rs  validation.rs
SpotiFLAC-Tauri/spotiflac-core-rs/test_history.db/: db  snap.00000000000000AD  snap.0000000000001FC6
(+121 files in other folders)
